--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,8 +15,8 @@ body {
 	padding: 50px;
 }
 
-a {
-  color: #00B7FF;
+a, a:active, a:visited, a:hover {
+  color: #0098ea;
 }
 
 h1, h2, h3 {
@@ -47,9 +47,38 @@ h3 {
 	background-color: white;
 	max-width: 900px;
 	margin: auto;
-	padding: 50px;
+	padding: 30px 50px;
 	border: solid 1px gray;
 	filter: drop-shadow(15px 15px #ccc);
+}
+
+.color-green {
+	color: #00bb00;
+}
+
+.color-red {
+	color: #cc0000;
+}
+
+.hand {
+	cursor: pointer;
+}
+
+nav {
+	background-color: #efefef;
+	text-align: center;
+	margin-top: 2rem;
+	padding: 1rem;
+}
+
+#try-again > div {
+	margin-top: 20px;
+}
+
+#error {
+	display: none;
+	color: #cc0000;
+	font-weight: 700;
 }
 
 #main > div {
@@ -79,23 +108,6 @@ h3 {
 	width: 30px;
 }
 
-.color-green {
-	color: #00bb00;
-}
-
-.color-red {
-	color: #cc0000;
-}
-
-.hand {
-	cursor: pointer;
-}
-
-#error {
-	display: none;
-	font-weight: 700;
-}
-
 #results-numbers {
 	font-weight: 700;
 }
@@ -104,3 +116,4 @@ h3 {
 	font-weight: 700;
 	font-size: 1.2rem;
 }
+
